Bug fix : 알림기능과 리뷰에 대한 버그 픽스